refactor: improve snappiness

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,10 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Thomas G. Lopes</title>
+		<meta
+			name="description"
+			content="Discover the work of Thomas G. Lopes, an experienced frontend developer with a talent for crafting seamless user experiences. Explore a portfolio of standout projects that showcase mastery of code and an eye for design."
+		/>
 		%sveltekit.head%
 	</head>
 	<body>
